<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        app:indicator_height="10dp"
        app:indicator_margin="10dp"
        app:indicator_width="10dp" />

    <!--お知らせ-->
    <RelativeLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="67dp">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/laba" />

        <TextView
            android:id="@+id/top_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView14"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imageView14"
            android:text="@string/top_notice"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/top_notice"
            android:layout_alignBottom="@+id/top_notice"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/top_notice"
            android:text="TOP画面リニューアル"
            android:textColor="#2f9ded" />

        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/top_more"
            android:textColor="#2f9ded" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#e0e5ee"></View>
    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_campaign_all"
        android:textColor="@color/Red"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#e0e5ee"></View>
    <ListView
        android:id="@+id/top_campaign_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
</LinearLayout>